fix: make Connect 4 board fit mobile viewports
Board used fixed 70px cells totalling ~490px, exceeding phone widths and
leaving right-hand columns unreachable. Cells now use flex with
aspect-ratio and cap at 70px, so the full 7x6 grid scales to any viewport
without horizontal scroll.

--- a/react_main/src/css/gameConnectFour.css
+++ b/react_main/src/css/gameConnectFour.css
@@ -6,22 +6,28 @@
 
 .game .connectFour-board {
   margin: 30px auto;
+  width: 100%;
+  max-width: 490px;
+  box-sizing: border-box;
 }
 
 .game .connectFour-board-row {
   display: flex;
-}
-
-.game .connectFour-board-row {
-  display: flex;
+  width: 100%;
 }
 
 .game .connectFour-board-box {
-  width: 70px;
-  height: 70px;
+  flex: 1 1 0;
+  max-width: 70px;
+  aspect-ratio: 1;
   margin: 0px;
   background-image: url("/src/images/ConnectFourBackground.png");
-  background-size: 70px 70px;
+  background-size: 100% 100%;
+}
+
+.game .connectFour-board-box .avatar {
+  width: calc(100% - 10px) !important;
+  height: calc(100% - 10px) !important;
 }
 
 .game .connectFour-board-box.clickable {
